--- a/src/app/modules/user/layouts/edit-profil/edit-profil.component.html
+++ b/src/app/modules/user/layouts/edit-profil/edit-profil.component.html
@@ -18,10 +18,10 @@
         </div>
       </div>
       <div class="mb-3 row">
-        <label for="firstName" class="col-sm-2 col-form-label">Nom</label>
+        <label for="lastName" class="col-sm-2 col-form-label">Nom</label>
         <div class="col-sm-10">
-          <input type="text" value="{{ user?.firstName }}" [formControl]="firstname" class="form-control"
-            id="firstName" />
+          <input type="text" value="{{ user?.lastName }}" [formControl]="lastname" class="form-control"
+            id="lastName" />
         </div>
       </div>
       <div class="mb-3 row">
