--- a/src/app/modules/user/layouts/chat-list/chat-list.component.html
+++ b/src/app/modules/user/layouts/chat-list/chat-list.component.html
@@ -3,10 +3,15 @@
     <div class="col-4 border">
 
       <div class="row" *ngFor="let chatRoom of chatRooms">
-                    <div class="col d-flex align-items-center justify-content-left link-chat border" (click)="openChat(chatRoom.users[0].id)">
-              <div class="">
-                <strong class="">{{chatRoom.users[0].pseudo}}</strong>
-              </div>
+                    <div class="col d-flex align-items-center justify-content-left link-chat border" (click)="openChat(chatRoom.users[0].id)" >
+<!--              <div class="" *ngFor="let item of chatRoom.users">-->
+                <p *ngIf="chatRoom.users[0].uid === uid; else test">
+                <strong class="">{{chatRoom.users[1].pseudo}}</strong></p>
+                      <ng-template #test><strong>{{chatRoom.users[0].pseudo}}</strong></ng-template>
+<!--                <p *ngIf="chatRoom.users[0].uid !== uid" ></p>-->
+<!--                <strong class="">{{chatRoom.users[0].pseudo}}</strong>-->
+
+<!--              </div>-->
           </div>
 
 
