--- a/src/app/modules/user/layouts/chat/chat.component.html
+++ b/src/app/modules/user/layouts/chat/chat.component.html
@@ -23,15 +23,18 @@
 </div>
 
 <div style="height: 250px; overflow-y: scroll">
-  <div *ngFor="let message of messageRoom" [ngClass]="chatRoomsForComponentChat.users[0].uid === message.uid_user ? 'text-end' : ''" [ngClass]="chatRoomsForComponentChat.users[1].uid === message.uid_user ? 'text-end' : ''">
-     <div *ngIf="chatRoomsForComponentChat.users[0].uid === message.uid_user; else testMessage">
-         <span class="bg-info">{{message.message}}</span>
-     </div>
-    <ng-template #testMessage><span class="bg-danger">{{message.message}}</span></ng-template>
-    <p>
-      <small>{{message.pseudo_user}}</small>
-    </p>
-  </div>
+
+    <div *ngFor="let message of messageRoom" [ngClass]="uid === message.uid_user ? 'text-end' : 'text-start'">
+      <div *ngIf="chatRoomsForComponentChat.users[0].uid === message.uid_user; else testMessage">
+        <span class="bg-info">{{message.message}}</span>
+      </div>
+      <ng-template #testMessage><span class="bg-danger">{{message.message}}</span></ng-template>
+      <p>
+        <small>{{message.pseudo_user}}</small>
+      </p>
+    </div>
+
+
 </div>
 
 <!--<div class="card" *ngFor="let message of messageRoom">-->
